--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,52 +4,54 @@ body {
 }
 
 .container {
-  max-width: 95%; /* container maior */
+  max-width: 90%; /* antes 95% */
   margin: 0 auto;
-  border: 3px solid black;
-  padding: 1.5%;
+  border: 2px solid black; /* borda mais fina */
+  padding: 1%;
   box-sizing: border-box;
 }
 
 .header {
   width: 100%;
-  height: 8vh; /* header maior */
-  min-height: 60px;
-  border: 3px solid black;
-  margin-bottom: 1.5%;
+  height: 6vh; /* antes 8vh */
+  min-height: 50px; /* antes 60px */
+  border: 2px solid black;
+  margin-bottom: 1%;
   display: flex;
   align-items: center;
   justify-content: center;
   font-weight: bold;
-  font-size: 1.8rem;
+  font-size: 1.5rem; /* antes 1.8rem */
 }
 
 .content {
   display: flex;
   flex-wrap: wrap;
-  gap: 1.5%;
+  gap: 1%;
 }
 
 .side-left, .side-right {
-  flex: 0 0 28%; /* laterais maiores */
-  border: 3px solid black;
-  min-height: 35vh;
+  flex: 0 0 25%; 
+  border: 2px solid black;
+  min-height: 25vh; 
   box-sizing: border-box;
+  font-size: 0.9rem;
+  padding: 5px;
 }
 
 .middle {
   flex: 1;
   display: flex;
   flex-wrap: wrap;
-  gap: 1.5%;
+  gap: 1%;
   justify-content: center;
   box-sizing: border-box;
 }
 
 .middle .box {
-  width: 25%; /* boxes maiores */
+  width: 43%;
   aspect-ratio: 1 / 1;
-  border: 3px solid black;
+  border: 2px solid black;
   overflow: hidden;
 }
 
@@ -59,7 +61,6 @@ body {
   object-fit: cover;
 }
 
-/* Responsividade */
 
 @media (max-width: 1100px) {
   .content {
@@ -68,25 +69,23 @@ body {
   }
 
   .side-left, .side-right {
-    width: 95%;
-    min-height: 25vh;
+    width: 90%; 
+    min-height: 20vh; 
     flex: none;
   }
 
   .middle {
-    width: 95%;
+    width: 90%; 
     justify-content: space-around;
   }
 
   .middle .box {
-    width: 48%;
-    aspect-ratio: 1 / 0.8;
+    width: 47%;
   }
 }
 
 @media (max-width: 600px) {
   .middle .box {
-    width: 95%;
-    aspect-ratio: 1 / 0.6;
+    width: 90%; /
   }
 }
