--- a/css/estilo.css
+++ b/css/estilo.css
@@ -46,13 +46,16 @@ body {
   gap: 1%;
   justify-content: center;
   box-sizing: border-box;
+
 }
 
 .middle .box {
   width: 43%;
   aspect-ratio: 1 / 1;
   border: 2px solid black;
+  margin-left: 20px;
   overflow: hidden;
+  height: 45%;
 }
 
 .middle .box img {
@@ -62,30 +65,4 @@ body {
 }
 
 
-@media (max-width: 1100px) {
-  .content {
-    flex-direction: column;
-    align-items: center;
-  }
 
-  .side-left, .side-right {
-    width: 90%; 
-    min-height: 20vh; 
-    flex: none;
-  }
-
-  .middle {
-    width: 90%; 
-    justify-content: space-around;
-  }
-
-  .middle .box {
-    width: 47%;
-  }
-}
-
-@media (max-width: 600px) {
-  .middle .box {
-    width: 90%; /
-  }
-}
